Made the HTML valid HTML5.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
+!<!DOCTYPE html>
 <html>
-	
-	<meta>
-		<title>muddle</title>
-	</meta>
-	
+	<head>
+		<meta charset="utf-8">
+		<title>Muddle</title>
+	</head>
 	<body>
-	
 		<p>Hey!</p>
-	
 	</body>
-	
 </html>
